syntax = "proto3";

option java_multiple_files = true;
option java_package = "comp655project";
option java_outer_classname = "ProductProto";

package product;

service ProductService {
    rpc findProduct (ProductIDMessage) returns (ProductMessage);
    rpc findRandomProduct (Empty) returns (ProductMessage);
    rpc findAllProducts (Empty) returns (ProductListMessage);
    rpc updateProduct (ProductMessage) returns (ProductMessage);
    rpc createProduct (ProductMessage) returns (ProductMessage);
    rpc deleteProduct (ProductIDMessage) returns (Empty);
}

message ProductIDMessage {
    int64 value = 1;
}

message ProductMessage {
    int64 id = 1;
    string name = 2;
    int64 quantity = 3;
    double price = 4;
}

message ProductListMessage {
    repeated ProductMessage products = 1;
}

message Empty {
}